fixing whitespace

--- a/homepage.css
+++ b/homepage.css
@@ -2,8 +2,7 @@
 body{
 padding: 0;
 margin: 0;
-height: 100vh;
-width: 100vh;
+height: 100%;
 }
 
 h1 {
